feat(server): added patch endpoint on memo
